upload note avatar (fileuploadcontroller)
add app settings (web.config)
 ajax request (addNoteCtrl.js)

--- a/MvcApp/Web.config
+++ b/MvcApp/Web.config
@@ -9,6 +9,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <add key ="NotesForModeration" value="~/Resources/NotesForModeration/" />
+    <add key ="VerifyNotes" value="~/Resources/VerifyNotes/" />
+    <add key ="UsersAvatars" value="~/Resources/UsersAvatars/" />
+  
   </appSettings>
   <system.web>
     <authentication mode="Forms">
