--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -20,6 +20,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <TargetFrameworkProfile />
+    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,6 +40,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime">
+      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.SignalR.Core">
       <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.1.2\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
     </Reference>
@@ -125,6 +129,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.2\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Optimization">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.2\lib\net45\System.Web.Razor.dll</HintPath>
@@ -152,6 +159,9 @@
     <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WebActivatorEx.2.0.6\lib\net40\WebActivatorEx.dll</HintPath>
+    </Reference>
+    <Reference Include="WebGrease">
+      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
     </Reference>
     <Reference Include="WebMatrix.Data, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -997,6 +1007,7 @@
     <Content Include="Scripts\i18n\angular-locale_zu.js" />
     <Content Include="Scripts\jstree.js" />
     <Content Include="Scripts\jstree.min.js" />
+    <Content Include="Scripts\myCSS\abn_tree.css" />
     <Content Include="Scripts\myCSS\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\fonts\icomoon.woff" />
     <Content Include="Content\fonts\icomoon.ttf" />
@@ -1077,6 +1088,7 @@
     <Content Include="Scripts\myCSS\css\font-awesome.css" />
     <Content Include="Scripts\myCSS\css\font-awesome.min.css" />
     <Content Include="Scripts\myCSS\loading-bar.css" />
+    <Content Include="Scripts\myCSS\recordCSS.css" />
     <Content Include="Scripts\myCSS\videogular.css" />
     <Content Include="Scripts\myScripts\addFileCtrl.js" />
     <Content Include="Scripts\myScripts\addNoteCtrl.js" />
@@ -1145,19 +1157,9 @@
     <Content Include="Scripts\video.js" />
     <Content Include="Scripts\videogular.js" />
     <Content Include="Scripts\videogular.min.js" />
-    <Content Include="Scripts\vjs-lang\de.js" />
-    <Content Include="Scripts\vjs-lang\es.js" />
-    <Content Include="Scripts\vjs-lang\fr.js" />
-    <Content Include="Scripts\vjs-lang\it.js" />
-    <Content Include="Scripts\vjs-lang\ja.js" />
-    <Content Include="Scripts\vjs-lang\ko.js" />
-    <Content Include="Scripts\vjs-lang\nl.js" />
-    <Content Include="Scripts\vjs-lang\pt-BR.js" />
-    <Content Include="Scripts\vjs-lang\ru.js" />
-    <Content Include="Scripts\vjs-lang\uk.js" />
-    <Content Include="Scripts\vjs-lang\zh.js" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
