--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -4,6 +4,7 @@
   <package id="angularjs" version="1.3.8" targetFramework="net451" />
   <package id="AngularJS.Core" version="1.3.8" targetFramework="net451" />
   <package id="AngularJS.Sanitize" version="1.3.8" targetFramework="net451" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.3.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
@@ -19,6 +20,7 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client.ru" version="5.2.2" targetFramework="net451" />
@@ -48,5 +50,6 @@
   <package id="videogular.complete" version="0.3.1.0" targetFramework="net451" />
   <package id="VideoJS" version="4.10.2" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
   <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net451" />
 </packages>
