--- a/MvcApp/bin/MvcApp.dll.config
+++ b/MvcApp/bin/MvcApp.dll.config
@@ -5,73 +5,70 @@
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
   </configSections>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <sectionExtension type=
-    "Microsoft.Practices.Unity.InterceptionExtension
-    .Configuration.InterceptionConfigurationExtension,
-    Microsoft.Practices.Unity.Interception.Configuration" />
+    <sectionExtension type="Microsoft.Practices.Unity.InterceptionExtension.Configuration.InterceptionConfigurationExtension, Microsoft.Practices.Unity.Interception.Configuration" />
     <namespace name="LogicLayer" />
     <namespace name="LoggingManager" />
     <namespace name="LogicLayer.CatalogManager" />
     <namespace name="LogicLayer.Entities" />
-    <namespace name="LogicLayer.Security" />
+    <namespace name="LogicLayer.Security" />  
     <namespace name="LogicLayer.Chat" />
     <namespace name="LogicLayer.Users" />
+    <namespace name="LogicLayer.CatalogManager.ThemeManager.RecordManager" />
     <assembly name="LogicLayer" />
-
-    <container>
-      <extension type="Interception" />
-
+    <assembly name="LoggingManager" />
+    
+    <container name="container">
       <register type="IChatHelper" mapTo="ChatHelper">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IUserHelper" mapTo="UserHelper">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="ISecurityHelper" mapTo="SecurityHelper">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[Category]" mapTo="CatalogManager">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="ITree" mapTo="CatalogManager">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[Note]" mapTo="NoteManager">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IHashCalculator" mapTo="Sha256HashCalculator">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[User]" mapTo="UsersInfo">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[LikeFile]" mapTo="LikeFileInfo">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[LikeNote]" mapTo="LikeNoteInfo">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[Characteristic]," mapTo="CharacteristicManager">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[File]" mapTo="FileManager">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
       <register type="IDataBaseManager`1[Note_Characteristic]" mapTo="Note_CharacteristicManager">
         <interceptor type="InterfaceInterceptor"/>
-        <interceptionBehavior type="LoggingInterceptionBehavior" />
+        <interceptionBehavior type="LoggingManager.LoggingInterceptionBehavior" />
       </register>
 
     </container>
