--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -1080,6 +1080,7 @@
     </Compile>
     <Compile Include="Hubs\MessageHub.cs" />
     <Compile Include="Models\Account\AccountViewModels.cs" />
+    <Compile Include="Models\TasksAndAdapters.cs" />
     <Compile Include="Models\UsersAndGroups.cs" />
     <Compile Include="Models\UsersForChat.cs" />
     <Compile Include="NoteAvatars.Designer.cs">
