--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -182,6 +182,7 @@
     <Content Include="Content\dashboard\font-awesome.min.css" />
     <Content Include="Content\dashboard\MyStyle.css" />
     <Content Include="Content\dashboard\sb-admin-2.css" />
+    <Content Include="Content\fileinput.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\fonts\fontawesome-webfont.svg" />
     <Content Include="Global.asax" />
